Temporarily patch the build logic, so embedded compilation tests could be run