@@ -202,6 +202,10 @@ fun Test.configureJvmForTest() {
     if (jvmVersionForTest().canCompileOrRun(9)) {
         if (isUnitTest() || usesEmbeddedExecuter()) {
             jvmArgs(org.gradle.internal.jvm.JpmsConfiguration.GRADLE_DAEMON_JPMS_ARGS)
+            // required by PreferenceCleaningGroovySystemLoader
+            jvmArgs(listOf("--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"))
+            // Required by JdkTools and JdkJavaCompiler
+            jvmArgs(listOf("--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"))
         } else {
             jvmArgs(listOf("--add-opens", "java.base/java.util=ALL-UNNAMED")) // Used in tests by native platform library: WrapperProcess.getEnv
             jvmArgs(listOf("--add-opens", "java.base/java.lang=ALL-UNNAMED")) // Used in tests by ClassLoaderUtils
